solc_ossfuzz_seed_corpus/test_sol/test_0059d5e6d9c77d2321a100a8c8fd717a6f25fba22d9f3761020c680794a2d7d8_31a7e907d24020803b06e5e3fd4193c2e2141dab_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0() public   
  {
    f0();
  }
  using L0 for *;
  uint168 public constant cons0 = uint168((~(uint16((((int16(32767) ** uint32(uint32(4294967295))) ** uint96(uint96(39114382153683186802679071450))) ** uint240(uint240(1125888850539406348594321320067856535613390431969243176314673745386024090)))))));
  error er0();
}
library L1 {
  function f1(bool i0,bytes memory i1) internal    returns(int160 o0)
  {
    (int160 l0) = f1({i0: true, i1: bytes("000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffff")});
  }
  function f2() external    returns(bytes30 o0,bytes memory o1,bytes memory o2)
  {
  }
  function f3(string memory i0) public    returns(function () internal   returns (bytes1, int16) o0,uint8 o1)
  {
  }
  function f4(address payable i0,bytes5 i1) external    returns(bool o0)
  {
  }
  using L0 for *;
  event ev0(function (bytes16, int248, uint152) external   returns (uint160)  ep0, address[2]  ep1);
  function f5(int152 i0,bool i1) public    returns(int120[1][2] memory o0,function (bytes9, bytes5, bytes21) external   returns (uint64) o1)
  {
  }
  function f6() external    returns(bool o0)
  {
  }
}
using L0 for uint;

==== Source: su1.sol ====
struct St0 {
  string el0;
  mapping(bool => bytes26) el1;
}
pragma solidity >= 0.0.0;
library L2 {
  event ev1(uint112  ep0);
  error er1();
}
using L2 for uint;
using L2 for uint;
using L2 for uint;
using L2 for uint;
using L2 for uint;
struct St1 {
  int88 el0;
  uint80 el1;
}
// ----
// Warning 3149: (su0.sol:156-198): The result type of the exponentiation operation is equal to the type of the first operand (int16) ignoring the (larger) type of the second operand (uint32) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:155-248): The result type of the exponentiation operation is equal to the type of the first operand (int16) ignoring the (larger) type of the second operand (uint96) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:154-344): The result type of the exponentiation operation is equal to the type of the first operand (int16) ignoring the (larger) type of the second operand (uint240) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 4103: (su0.sol:756-805): Internal type is not allowed for public or external functions.
